--- a/client/templates/dialog-artist-bio.jade
+++ b/client/templates/dialog-artist-bio.jade
@@ -1,6 +1,6 @@
 .dialog-artist
 	if image
-		img.pull-left(src=image)
+		.artist-image.pull-left(style="background-image: url('" + image + "');")
 	
 	div.pull-left
 		h3=name
